# osdu-spi-stack

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.agents/skills/clone/: SKILL.md
.agents/skills/osdu-api/: SKILL.md
.agents/skills/osdu-gitlab/: SKILL.md
.agents/skills/osdu-mr/: SKILL.md
.agents/skills/osdu-test/: SKILL.md
.agents/skills/prime/: SKILL.md
.agents/skills/setup/: SKILL.md
.agents/skills/ship/: SKILL.md
.github/: CODEOWNERS  copilot-instructions.md
.github/ISSUE_TEMPLATE/: config.yml
.github/prompts/: prime.prompt.md
.github/skills/prime/: SKILL.md
.github/workflows/: codeql.yml  release.yml  smoke.yml  sweeper.yml  validate.yml
docs/: CI_SETUP.md  ai-skills.md  architecture.md  bicep-migration.md
docs/decisions/: 001-azure-paas-for-data.md  002-aks-automatic.md  003-cli-plus-gitops-hybrid.md  004-local-helm-chart-safeguards.md  005-workload-identity.md  006-three-namespace-model.md  007-layered-kustomization-ordering.md  008-in-cluster-middleware-scope.md  009-service-bus-messaging.md  010-keyvault-secret-management.md  011-runtime-bootstrap-as-flux-job.md  012-bicep-avm-for-azure-paas.md  013-schema-load-flux-job.md  014-suspend-gitops-after-deploy.md  015-partition-entitlements-bootstrap.md  016-istio-jwt-projection.md  README.md
docs/design/: README.md  deployment-lifecycle.md
infra/: aks.bicep  flux.bicep  main.bicep
infra/modules/: cosmos-gremlin.bicep  identity.bicep  partition.bicep  rbac.bicep  storage-common.bicep
infra/params/: default.bicepparam  dev1.bicepparam
scripts/: resolve-image-tags.py  sweep_orphan_rgs.sh  wait_for_flux_ready.sh
software/charts/osdu-spi-service/: values.yaml
software/components/airflow/: release.yaml
software/components/cert-manager/: release.yaml
software/components/elasticsearch/: cluster.yaml
software/components/namespaces/: namespaces.yaml
software/components/nodepools/: nodepools.yaml
software/components/postgres/: cluster.yaml
src/spi/: __init__.py  azure_infra.py  bicep.py  bootstrap.py  checks.py  cli.py  config.py  deploy.py  guard.py  helpers.py  images.py  info.py  ingress.py  paths.py  runtime_bootstrap.py  secrets.py  shell.py  status.py  templates.py  update.py
tests/: test_config_validation.py  test_images.py  test_update.py
(+50 files in other folders)
