[project]
name = "spi"
version = "0.1.0"
description = "OSDU SPI Stack CLI (osdu-spi-stack) - Deploy OSDU on Azure with SPI services"
requires-python = ">=3.10"
dependencies = [
    "rich>=14.3.0",
    "typer>=0.24.0",
    "pydantic>=2.12.0",
]

[project.scripts]
spi = "spi.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spi"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
]
